--- a/Products.css
+++ b/Products.css
@@ -16,7 +16,7 @@ h1{
     text-align: center;
     color: white;
     background-color: black;
-    height: 50px;
+    height: 80pxpx;
     width: 100%;
     margin-bottom: 0%;
 }
